@@ -31,6 +31,26 @@
                             </requirement>
                             <requirement>
                                 <type>eclipse-feature</type>
+                                <id>org.knime.features.javasnippet</id>
+                                <versionRange>0.0.0</versionRange>
+                            </requirement>
+                            <requirement>
+                                <type>eclipse-feature</type>
+                                <id>org.knime.features.base</id>
+                                <versionRange>0.0.0</versionRange>
+                            </requirement>
+                            <requirement>
+                                <type>eclipse-feature</type>
+                                <id>org.knime.features.base.expressions</id>
+                                <versionRange>0.0.0</versionRange>
+                            </requirement>
+                            <requirement>
+                                <type>eclipse-feature</type>
+                                <id>org.knime.features.filehandling.core</id>
+                                <versionRange>0.0.0</versionRange>
+                            </requirement>
+                            <requirement>
+                                <type>eclipse-feature</type>
                                 <id>org.knime.features.clfixes</id>
                                 <versionRange>0.0.0</versionRange>
                             </requirement>
@@ -65,6 +85,8 @@
                         --add-opens=java.base/java.nio.channels=ALL-UNNAMED
                         --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
                         --add-opens=java.base/sun.nio=ALL-UNNAMED
+                        --add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED
+                        --add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
